@@ -6,6 +6,7 @@ PHP                                                                        NEWS
 
 - Fixed bug #46521 (Curl ZTS OpenSSL, error in config.m4 fragment).
   (jd at cpanel dot net)
+- Fixed bug #44818 (php://memory writeable when opened read only). (Arnaud)
 - Fixed bug #30312 (sybase_unbuffered_query calls). (Timm)
 
 06 Nov 2008, PHP 5.2.7RC3
